[gd_scene load_steps=2 format=3 uid="uid://bd008jmwn1jdj"]

[ext_resource type="Script" path="res://Scenes/MainMenu/MainMenu.gd" id="1_3kfvh"]

[node name="Main menu" type="Node2D"]
script = ExtResource("1_3kfvh")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1150.0
offset_bottom = 645.0
color = Color(0.321569, 0.270588, 0.380392, 1)

[node name="PlayBtn" type="Button" parent="."]
offset_left = 398.0
offset_top = 259.0
offset_right = 847.0
offset_bottom = 387.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "New Game"
metadata/_edit_use_anchors_ = true

[node name="ContinueBtn" type="Button" parent="."]
offset_left = 396.0
offset_top = 64.0
offset_right = 845.0
offset_bottom = 192.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Continue"
metadata/_edit_use_anchors_ = true

[node name="QuitBtn" type="Button" parent="."]
offset_left = 401.0
offset_top = 457.0
offset_right = 851.0
offset_bottom = 585.0
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Quit"

[connection signal="pressed" from="PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="ContinueBtn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="QuitBtn" to="." method="_on_quit_btn_pressed"]
